--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ pydantic==2.4.2
 pydantic_core==2.10.1
 pymongo==3.11.0
 python-dateutil==2.8.2
+python-dotenv==1.0.0
 python-jose==3.3.0
 python-multipart==0.0.6
 pytz==2023.3.post1
