--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ fastapi==0.104.1
 fuzzywuzzy==0.18.0
 h11==0.14.0
 idna==3.4
+joblib==1.3.2
 numpy==1.26.1
 pandas==1.3.4
 passlib==1.7.4
@@ -26,9 +27,12 @@ python-jose==3.3.0
 python-multipart==0.0.6
 pytz==2023.3.post1
 rsa==4.9
+scikit-learn==1.3.2
+scipy==1.11.3
 six==1.16.0
 sniffio==1.3.0
 starlette==0.27.0
+threadpoolctl==3.2.0
 typing_extensions==4.8.0
 tzdata==2023.3
 uvicorn==0.23.2
