--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ h11==0.14.0
 idna==3.4
 isodate==0.6.1
 joblib==1.3.2
+Levenshtein==0.23.0
 numpy==1.26.1
 pandas==2.1.1
 passlib==1.7.4
@@ -29,8 +30,10 @@ pymongo==3.11.0
 python-dateutil==2.8.2
 python-dotenv==1.0.0
 python-jose==3.3.0
+python-Levenshtein==0.23.0
 python-multipart==0.0.6
 pytz==2023.3.post1
+rapidfuzz==3.5.2
 requests==2.31.0
 rsa==4.9
 scikit-learn==1.3.2
