remove access token minutes from env

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,6 @@
-DATABASE_URL = 
-SECRET_KEY = 
-ALGORITHM = 
-ACCESS_TOKEN_EXPIRE_MINUTES = 
+DATABASE_URL =
+KEY = 
+ALGORITHM =
+USERNAME =
+PASSWORD = 
+SUPERADMIN_SECRET_KEY = 
