--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,10 +20,10 @@ services:
       KEY: ${KEY}
       ALGORITHM: ${ALGORITHM}
       SUPERADMIN_SECRET_KEY: ${SUPERADMIN_SECRET_KEY}
-  viberec:
-    image: tst18221162.azurecr.io/vibe-rec:latest
+  moodrec:
+    image: tst18221162.azurecr.io/mood-rec:latest
     build:
-      context: ./vibe_based_recommendation
+      context: ./mood_based_recommendation
     restart: unless-stopped
     ports:
       - "8001:80"
