--- a/prometheus.yml
+++ b/prometheus.yml
@@ -4,8 +4,8 @@ global:
 scrape_configs:
   - job_name: "movie-recommendation"
     static_configs:
-      - targets: ["viberec:8000"]
-  - job_name: "vibe-based-recommendation"
+      - targets: ["moodrec:8000"]
+  - job_name: "mood-based-recommendation"
     static_configs:
       - targets: ["movierec:8001"]
   - job_name: "prometheus"
